# curriculum-vitae

./: .gitignore  .pre-commit-config.yaml  README.md  Tupfile  clean_pdf  config.toml  gen  pyproject.toml
.github/workflows/: test-build.yaml
src/curriculum_vitae/: __init__.py  __main__.py  gen.py  generate.py  styles.py
tests/: test_cli.py
