[project]
name = "curriculum_vitae"
version = "0.0.1"
authors = [{ name = "Valérian Rousset", email = "tharvik@gmail.com" }]
description = "Generate a nice looking CV from a TOML configuration"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = ["odfpy", "tomlkit"]

[project.urls]
"Homepage" = "https://github.com/tharvik/curriculum-vitae"
"Bug Tracker" = "https://github.com/tharvik/curriculum-vitae/issues"

[project.scripts]
cv = "curriculum_vitae.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.typos.default.extend-identifiers]
odf = "odf"
